<resources>
    <string name="app_name">JAMMCards</string>
    <string name="card_text_hint">Enter text for the card</string>
    <string name="card_show_label">Show</string>
    <string name="new_card">New Card</string>
    <string name="show_subtitle">Show Card Count</string>
    <string name="hide_subtitle">Hide Card Count</string>
    <string name="front_subtitle">Flip to Back</string>
    <string name="back_subtitle">Flip to Front</string>
    <string name="subtite_format">%1$d cards</string>
    <string name="delete_card">Delete Card</string>
    <string name="delete_deck">Delete Deck</string>
    <string name="new_deck">New Deck</string>
    <string name="title_activity_main_quiz">MainQuiz</string>
    <string name="next_button">Next</string>
    <string name="flip_button">Flip</string>
    <string name="correct_button">Correct</string>
    <string name="wrong_button">Wrong</string>
    <string name="card_view_description">Card Image</string>
    <string name="title_activity_quiz_results">QuizResults</string>
    <string name="end_quiz">End Quiz</string>
    <string name="view_quiz_stats">View Stats</string>
</resources>
